# Testing_docstrings_module14

./: .coverage  .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
examples_tests/src/example/: ops.py
examples_tests/src/get_recipe/: get_recipe.md  get_recipe.py
examples_tests/src/method/: main.py
examples_tests/src/my_class/: main.py  task.md
examples_tests/src/reduce_sum/: answer.py  task.md
examples_tests/src/save_data/: answer.py  task.md
examples_tests/tests/: async_repeat.py  basic_mock_from_DSC.py  conspect_tests.py  request_example.py  test_answer.py  test_class.py  test_method.py  test_mock_open.py  test_ops.py  test_recipe.py  test_save.py
migrations/versions/: 33563103e662_add_cascade_del_for_contactsreluser.py  9243ad0762bb_new_base_compose.py  c120ee42efff_add_avatar_field.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619
postgres-data/base/16384/: 1247  1249  1259  16388  16391  16393  16398  16400  16402  16403  16408  16409  16416  2224  2579  2604  2606  2608  2610  2619  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2699  2701  2702  2703  (+4 more)
postgres-data/base/5/: 2619  pg_internal.init
postgres-data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgres-data/pg_xact/: 0000
src/conf/: config.py  messages.py
src/database/: connect.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: api_service.py  auth.py  contacts.py  custom_tasks.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  cache_redis.py  email.py
templates/: request_verify_email.html  response_email_verification.html  start_page.html
tests/: conftest.py  test_e2e_api_healthchecker.py  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_custom_tasks.py  test_e2e_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
